# lazy-tasks

./: .env.example  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: deps.py
app/api/routes/: health.py  telegram.py
app/core/: config.py  database.py
app/models/: __init__.py  chat.py  task.py
app/prompts/: __init__.py
app/prompts/system/: analyzer.yaml  personality.yaml
app/prompts/templates/: daily_briefing.jinja2  task_clarification.jinja2
app/services/: __init__.py  chat_service.py  intent_router.py  llm_service.py  prompt_manager.py  task_service.py  telegram_service.py
docs/: CODING_CONVENTION.md  PROJECT_CONTEXT_MAP.md  PROJECT_SPECS.md  SYSTEM_PROMPTS_BLUEPRINT.md  TECHNICAL_ARCHITECTURE.md  USER_CASES_AND_FEATURES.md  USER_PROFILE.md
scripts/: init.sql  start.sh
